test the metric library in order to use it for the F1 score

--- a/src/DataMining.ipynb
+++ b/src/DataMining.ipynb
@@ -178,7 +178,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "08ef063f-dad9-4036-c54a-b59117b2bcd9"
+        "outputId": "485ba0cb-b2e0-47f6-b2df-59d8ed4b7c8a"
       },
       "source": [
         "using Pkg\n",
@@ -188,12 +188,15 @@
         "Pkg.add(\"DataDeps\")\n",
         "Pkg.add(\"DataFrames\")\n",
         "Pkg.add(\"JSON3\")\n",
+        "Pkg.add(\"Metrics\")\n",
+        "\n",
         "\n",
         "using Printf\n",
         "using DataFrames\n",
         "using JSON3\n",
         "using Flux\n",
         "using CUDA\n",
+        "using Metrics\n",
         "using Transformers\n",
         "using Transformers.Basic\n",
         "using Transformers.Pretrain\n",
@@ -207,11 +210,14 @@
         "enable_gpu(true)\n",
         "ENV[\"DATADEPS_ALWAYS_ACCEPT\"] = true"
       ],
-      "execution_count": 20,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "\u001b[32m\u001b[1m  Resolving\u001b[22m\u001b[39m package versions...\n",
+            "\u001b[32m\u001b[1mNo Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.5/Project.toml`\n",
+            "\u001b[32m\u001b[1mNo Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.5/Manifest.toml`\n",
             "\u001b[32m\u001b[1m  Resolving\u001b[22m\u001b[39m package versions...\n",
             "\u001b[32m\u001b[1mNo Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.5/Project.toml`\n",
             "\u001b[32m\u001b[1mNo Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.5/Manifest.toml`\n",
@@ -243,7 +249,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 36
         }
       ]
     },
@@ -455,6 +461,100 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vWwD-57Why_9",
+        "outputId": "4b8f150f-064e-44d5-b0ad-2ea3b8ea086b"
+      },
+      "source": [
+        "labels = unique(df[!,\"label\"])\n",
+        "labels"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "13-element Array{String,1}:\n",
+              " \"INHIBITOR\"\n",
+              " \"ANTAGONIST\"\n",
+              " \"AGONIST\"\n",
+              " \"DOWNREGULATOR\"\n",
+              " \"PRODUCT-OF\"\n",
+              " \"SUBSTRATE\"\n",
+              " \"INDIRECT-UPREGULATOR\"\n",
+              " \"UPREGULATOR\"\n",
+              " \"INDIRECT-DOWNREGULATOR\"\n",
+              " \"ACTIVATOR\"\n",
+              " \"AGONIST-ACTIVATOR\"\n",
+              " \"AGONIST-INHIBITOR\"\n",
+              " \"SUBSTRATE_PRODUCT-OF\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t7oOszOZhd78",
+        "outputId": "3acdb960-9d70-40f0-e008-0e0bf9182528"
+      },
+      "source": [
+        "@show test_label = test[!,\"label\"][1]\n",
+        "\n",
+        "pos = findall(x->x==test_label, labels)\n",
+        "buffer_true = Metrics.onehot_encode(pos[1], 0:length(labels))"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "test_label = (test[!, \"label\"])[1] = \"ANTAGONIST\"\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14×1 Array{Float64,2}:\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 1.0\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 0.0\n",
+              " 0.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "IMcLPXa0hdmh"
@@ -657,69 +757,6 @@
             "tags": []
           },
           "execution_count": 12
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 197
-        },
-        "id": "LctCNDOZ4ZEM",
-        "outputId": "c3d2dea4-106e-47d8-ab8d-5f55cc48bb21"
-      },
-      "source": [
-        "tokenize(df[!,\"text\"][1],tokenizer,wordpiece)"
-      ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "LoadError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[91mMethodError: no method matching tokenize(::String, ::typeof(Transformers.BidirectionalEncoder.bert_uncased_tokenizer), ::Transformers.BidirectionalEncoder.WordPiece)\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  tokenize(::Any, ::Any) at In[12]:3\u001b[39m",
-            "",
-            "Stacktrace:",
-            " [1] top-level scope at In[21]:1",
-            " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "d264I1G8uV2l",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "88ac892c-7b21-42dc-b5d7-b22c16b26eb7"
-      },
-      "source": [
-        "function tokenise(input)\n",
-        "    ts = TokenBuffer(input)\n",
-        "    while !isdone(ts)\n",
-        "        spaces(ts) || character(ts)\n",
-        "    end\n",
-        "    return ts.tokens\n",
-        "end"
-      ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tokenise (generic function with 1 method)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
         }
       ]
     },
