function added for the F1 score and all functions grouped together

--- a/src/DataMining.ipynb
+++ b/src/DataMining.ipynb
@@ -362,6 +362,237 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "g7t-bD-j_tBO"
+      },
+      "source": [
+        "# Required functions\n",
+        "\n",
+        "\n",
+        "1.   loss function\n",
+        "2.   train function\n",
+        "3.   tokenize function\n",
+        "4.   score function (for calculating F1 score)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K3PFPF4lnO8J",
+        "outputId": "a6cbfe82-3a9b-4c37-d466-eb113ebf914a"
+      },
+      "source": [
+        "#define the loss\n",
+        "function loss(data, label, mask=nothing)\n",
+        "    e = model.embed(data)\n",
+        "    t = model.transformers(e, mask)\n",
+        "    l = Basic.logcrossentropy(\n",
+        "        label,\n",
+        "        model.classifier.clf(\n",
+        "            model.classifier.pooler(\n",
+        "                t[:,1,:]\n",
+        "            )\n",
+        "        )\n",
+        "    )\n",
+        "    return l\n",
+        "end"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "loss (generic function with 2 methods)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wJmRa5mRym4i",
+        "outputId": "62043d3b-d0b0-4d9b-bfa6-83ec7342a4ee"
+      },
+      "source": [
+        "markline(s1) = [\"[CLS]\"; s1; \"[SEP]\"; s2; \"[SEP]\"]\n",
+        "\n",
+        "function tokenize(sentence,label)\n",
+        "    attention_start = findfirst(\"<<\",sentence)[1]\n",
+        "    attention_end  = findfirst(\">>\", sentence)[1]\n",
+        "\n",
+        "    token_start = findfirst(\"[[\", sentence)[1]\n",
+        "    token_end = findfirst(\"]]\", sentence)[1]\n",
+        "\n",
+        "    if attention_start < token_start\n",
+        "      b = split(sentence, r\"<<|>>|\\[\\[|\\]\\]\")\n",
+        "\n",
+        "      output = [\"[CLS]\";b[1]|>tokenizer |> wordpiece; \"[<<]\" ;\n",
+        "        b[2]|>tokenizer|> wordpiece; \"[>>]\";\n",
+        "        b[3]|>tokenizer|> wordpiece; \"[[[]\";\n",
+        "        b[4]|>tokenizer|> wordpiece; \"[]]]\";\n",
+        "        b[5]|>tokenizer|> wordpiece ;\"[SEP]\"]\n",
+        "    else\n",
+        "      b = split(sentence, r\"<<|>>|\\[\\[|\\]\\]\")\n",
+        "      output = [\"[CLS]\";b[1]|>tokenizer|> wordpiece; \"[[[]\";\n",
+        "        b[2]|>tokenizer|> wordpiece; \"[]]]\";\n",
+        "        b[3]|>tokenizer |> wordpiece; \"[<<]\" ;\n",
+        "        b[4]|>tokenizer|> wordpiece; \"[>>]\";\n",
+        "        b[5]|>tokenizer|> wordpiece ;\"[SEP]\"]\n",
+        "    end\n",
+        "\n",
+        "\n",
+        "    tok = vocab(output)\n",
+        "    segment = fill!(similar(tok), 1)\n",
+        "    label = onehot(label, labels)\n",
+        "    mask = getmask([output])\n",
+        "\n",
+        "    return (tok=tok, segment=segment), label, mask\n",
+        "end"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tokenize (generic function with 1 method)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lkqXnH1erEbU",
+        "outputId": "222cd88d-7658-4659-ad16-2640a94aee3f"
+      },
+      "source": [
+        "function train!()\n",
+        "  @info \"start training\"\n",
+        "  for i ∈ 1:nrow(df)\n",
+        "    sentence = df[!,\"text\"][i]\n",
+        "    label = df[!,\"label\"][i]\n",
+        "\n",
+        "    #moving the needed data to the gpu\n",
+        "    data, label, mask = todevice(\n",
+        "      tokenize(sentence,label)\n",
+        "    )\n",
+        "\n",
+        "\n",
+        "    l = loss(data,label,mask)\n",
+        "    @show l\n",
+        "    #grad = gradient(()->l, ps)\n",
+        "    \n",
+        "    # new version of the gradient calculation\n",
+        "    grad = gradient(ps) do\n",
+        "              training_loss = loss(data,label,mask)\n",
+        "              training_loss\n",
+        "            end\n",
+        "\n",
+        "\n",
+        "    # update the model weights\n",
+        "    update!(opt, ps, grad)\n",
+        "  end\n",
+        "end"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "train! (generic function with 1 method)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OrQTl-jQ_Mk3",
+        "outputId": "188a030f-fc33-4ad1-8121-30440793c4f3"
+      },
+      "source": [
+        "function compute_F1(sentence,label, avg_type = \"micro\")\n",
+        "    Flux.testmode!(model)\n",
+        "    size = length(labels)\n",
+        "\n",
+        "    y_pred = Array{Float64}(undef,size, 0)\n",
+        "    y_true = Array{Float64}(undef,size, 0)\n",
+        "\n",
+        "    for i ∈ 1:length(sentence)\n",
+        "      flush(stdout)\n",
+        "      data, label_ignore, mask = todevice( #move data to gpu\n",
+        "                            tokenize(sentence[i],label[i])\n",
+        "                          )\n",
+        "      e =           model.embed(data)\n",
+        "      t =           model.transformers(e, mask)\n",
+        "      prediction =  model.classifier.clf(\n",
+        "                      model.classifier.pooler(\n",
+        "                        t[:,1,:]\n",
+        "                      )\n",
+        "                    )\n",
+        "\n",
+        "      buffer_pred = Array(prediction)\n",
+        "      y_pred = hcat(y_pred,buffer_pred)\n",
+        "\n",
+        "      pos = findall(x->x==label[i], labels)\n",
+        "\n",
+        "      buffer_true = Metrics.onehot_encode(pos[1]-1, 0:size-1)\n",
+        "      y_true = hcat(y_true,buffer_true)\n",
+        "    end\n",
+        "\n",
+        "    Flux.testmode!(model, false)\n",
+        "\n",
+        "    return f_beta_score(y_pred, y_true; avg_type)\n",
+        "end"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "compute_F1 (generic function with 2 methods)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ooKMViA82pDD"
       },
       "source": [
@@ -658,107 +889,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "K3PFPF4lnO8J",
-        "outputId": "a6cbfe82-3a9b-4c37-d466-eb113ebf914a"
+        "id": "3dJvBpT6_3rR"
       },
       "source": [
         "ps = params(scibert_scivocab_uncased_model)\n",
-        "opt = ADAM(1e-5)\n",
-        "\n",
-        "#define the loss\n",
-        "function loss(data, label, mask=nothing)\n",
-        "    e = model.embed(data)\n",
-        "    t = model.transformers(e, mask)\n",
-        "    l = Basic.logcrossentropy(\n",
-        "        label,\n",
-        "        model.classifier.clf(\n",
-        "            model.classifier.pooler(\n",
-        "                t[:,1,:]\n",
-        "            )\n",
-        "        )\n",
-        "    )\n",
-        "    return l\n",
-        "end"
+        "opt = ADAM(1e-5)"
       ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "loss (generic function with 2 methods)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 34
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wJmRa5mRym4i",
-        "outputId": "62043d3b-d0b0-4d9b-bfa6-83ec7342a4ee"
-      },
-      "source": [
-        "markline(s1) = [\"[CLS]\"; s1; \"[SEP]\"; s2; \"[SEP]\"]\n",
-        "\n",
-        "function tokenize(sentence,label)\n",
-        "    attention_start = findfirst(\"<<\",sentence)[1]\n",
-        "    attention_end  = findfirst(\">>\", sentence)[1]\n",
-        "\n",
-        "    token_start = findfirst(\"[[\", sentence)[1]\n",
-        "    token_end = findfirst(\"]]\", sentence)[1]\n",
-        "\n",
-        "    if attention_start < token_start\n",
-        "      b = split(sentence, r\"<<|>>|\\[\\[|\\]\\]\")\n",
-        "\n",
-        "      output = [\"[CLS]\";b[1]|>tokenizer |> wordpiece; \"[<<]\" ;\n",
-        "        b[2]|>tokenizer|> wordpiece; \"[>>]\";\n",
-        "        b[3]|>tokenizer|> wordpiece; \"[[[]\";\n",
-        "        b[4]|>tokenizer|> wordpiece; \"[]]]\";\n",
-        "        b[5]|>tokenizer|> wordpiece ;\"[SEP]\"]\n",
-        "    else\n",
-        "      b = split(sentence, r\"<<|>>|\\[\\[|\\]\\]\")\n",
-        "      output = [\"[CLS]\";b[1]|>tokenizer|> wordpiece; \"[[[]\";\n",
-        "        b[2]|>tokenizer|> wordpiece; \"[]]]\";\n",
-        "        b[3]|>tokenizer |> wordpiece; \"[<<]\" ;\n",
-        "        b[4]|>tokenizer|> wordpiece; \"[>>]\";\n",
-        "        b[5]|>tokenizer|> wordpiece ;\"[SEP]\"]\n",
-        "    end\n",
-        "\n",
-        "\n",
-        "    tok = vocab(output)\n",
-        "    segment = fill!(similar(tok), 1)\n",
-        "    label = onehot(label, labels)\n",
-        "    mask = getmask([output])\n",
-        "\n",
-        "    return (tok=tok, segment=segment), label, mask\n",
-        "end"
-      ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tokenize (generic function with 1 method)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -872,53 +1010,39 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 316
         },
-        "id": "lkqXnH1erEbU",
-        "outputId": "222cd88d-7658-4659-ad16-2640a94aee3f"
+        "id": "Gq3JrlI4_Wct",
+        "outputId": "3b70f343-b403-46e3-bd04-50b0ef9f4834"
       },
       "source": [
-        "function train!()\n",
-        "  @info \"start training\"\n",
-        "  for i ∈ 1:nrow(df)\n",
-        "    sentence = df[!,\"text\"][i]\n",
-        "    label = df[!,\"label\"][i]\n",
+        "sentence = test[!,\"text\"]\n",
+        "label = test[!,\"label\"]\n",
         "\n",
-        "    #moving the needed data to the gpu\n",
-        "    data, label, mask = todevice(\n",
-        "      tokenize(sentence,label)\n",
-        "    )\n",
-        "\n",
-        "\n",
-        "    l = loss(data,label,mask)\n",
-        "    @show l\n",
-        "    #grad = gradient(()->l, ps)\n",
-        "    \n",
-        "    # new version of the gradient calculation\n",
-        "    grad = gradient(ps) do\n",
-        "              training_loss = loss(data,label,mask)\n",
-        "              training_loss\n",
-        "            end\n",
-        "\n",
-        "\n",
-        "    # update the model weights\n",
-        "    update!(opt, ps, grad)\n",
-        "  end\n",
-        "end"
+        "new = compute_F1(sentence,label)"
       ],
-      "execution_count": 31,
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "train! (generic function with 1 method)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
+          "output_type": "error",
+          "ename": "LoadError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[91mBoundsError: attempt to access 13×3469 Array{Float64,2} at index [14, 1]\u001b[39m",
+            "",
+            "Stacktrace:",
+            " [1] setindex! at ./array.jl:849 [inlined]",
+            " [2] onehot_encode(::Array{Float64,1}, ::UnitRange{Int64}) at /root/.julia/packages/Metrics/NPCgV/src/Classification.jl:8",
+            " [3] confusion_matrix(::Array{Float64,2}, ::Array{Float64,2}) at /root/.julia/packages/Metrics/NPCgV/src/Classification.jl:44",
+            " [4] TFPN(::Array{Float64,2}, ::Array{Float64,2}) at /root/.julia/packages/Metrics/NPCgV/src/Classification.jl:58",
+            " [5] recall(::Array{Float64,2}, ::Array{Float64,2}; avg_type::String, sample_weights::Nothing) at /root/.julia/packages/Metrics/NPCgV/src/Classification.jl:195",
+            " [6] f_beta_score(::Array{Float64,2}, ::Array{Float64,2}; β::Int64, avg_type::String, sample_weights::Nothing) at /root/.julia/packages/Metrics/NPCgV/src/Classification.jl:230",
+            " [7] compute_F1(::Array{String,1}, ::Array{String,1}, ::String) at ./In[43]:32",
+            " [8] compute_F1(::Array{String,1}, ::Array{String,1}) at ./In[43]:2",
+            " [9] top-level scope at In[44]:4",
+            " [10] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+          ]
         }
       ]
     },
