restructuring the notebook

--- a/src/DataMining.ipynb
+++ b/src/DataMining.ipynb
@@ -381,7 +381,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K3PFPF4lnO8J",
-        "outputId": "a6cbfe82-3a9b-4c37-d466-eb113ebf914a"
+        "outputId": "8eeb078c-22ae-4ce8-9470-9b5653a23d7c"
       },
       "source": [
         "#define the loss\n",
@@ -399,7 +399,7 @@
         "    return l\n",
         "end"
       ],
-      "execution_count": 34,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +411,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 45
         }
       ]
     },
@@ -422,7 +422,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wJmRa5mRym4i",
-        "outputId": "62043d3b-d0b0-4d9b-bfa6-83ec7342a4ee"
+        "outputId": "58d27dd7-7e80-4b83-b6cc-7df9b787e9de"
       },
       "source": [
         "markline(s1) = [\"[CLS]\"; s1; \"[SEP]\"; s2; \"[SEP]\"]\n",
@@ -460,7 +460,7 @@
         "    return (tok=tok, segment=segment), label, mask\n",
         "end"
       ],
-      "execution_count": 12,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +472,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 46
         }
       ]
     },
@@ -483,7 +483,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lkqXnH1erEbU",
-        "outputId": "222cd88d-7658-4659-ad16-2640a94aee3f"
+        "outputId": "954beec1-e1ff-41a3-c690-674edfd230e8"
       },
       "source": [
         "function train!()\n",
@@ -514,7 +514,7 @@
         "  end\n",
         "end"
       ],
-      "execution_count": 31,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +526,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 47
         }
       ]
     },
@@ -537,7 +537,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OrQTl-jQ_Mk3",
-        "outputId": "188a030f-fc33-4ad1-8121-30440793c4f3"
+        "outputId": "02f5c88c-9b04-403c-deef-0c2ec7b82420"
       },
       "source": [
         "function compute_F1(sentence,label, avg_type = \"micro\")\n",
@@ -574,7 +574,7 @@
         "    return f_beta_score(y_pred, y_true; avg_type)\n",
         "end"
       ],
-      "execution_count": 43,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +586,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 48
         }
       ]
     },
@@ -605,7 +605,7 @@
         "id": "Q8ZApa2Shsna"
       },
       "source": [
-        "###loading the test and trainings data of the chemprot corpus"
+        "printing the test and trainings data of the chemprot corpus"
       ]
     },
     {
@@ -618,11 +618,6 @@
         "outputId": "3776a1cd-60f3-412d-f529-fcb48c3693b4"
       },
       "source": [
-        "df = JSON3.read.(eachline(datadep\"SciBert/data/text_classification/chemprot/train.txt\")) |> DataFrame\n",
-        "\n",
-        "#df.text = Vector{String}.(df.text)\n",
-        "#df.label = Vector{String}.(df.label)\n",
-        "\n",
         "@printf \"printing column names of the train data:\\n\"\n",
         "@show names(df)\n",
         "\n",
@@ -792,6 +787,205 @@
       },
       "source": [
         "# Rebuilding of SciBert for CLS task"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "icGXXxMzqGXT"
+      },
+      "source": [
+        "## uncased scibert model with scivocab"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cMIVVVNVqTp5"
+      },
+      "source": [
+        "### loading the model and exchanging the classification layer"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mA_qqsjVKHjk"
+      },
+      "source": [
+        "Loading the Pretrained Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wzmhTY7RKFgn",
+        "outputId": "aca2b38e-25e9-4686-b04d-6190ba79591d"
+      },
+      "source": [
+        "model, wordpiece, tokenizer = pretrain\"Bert-scibert_scivocab_uncased\""
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "┌ Info: loading pretrain bert model: scibert_scivocab_uncased.tfbson \n",
+            "└ @ Transformers.BidirectionalEncoder /root/.julia/packages/Transformers/lFBL6/src/bert/load_pretrain.jl:8\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TransformerModel{Bert{Stack{NTuple{12,Transformer{Transformers.Basic.MultiheadAttention{Dense{typeof(identity),Array{Float32,2},Array{Float32,1}},Dense{typeof(identity),Array{Float32,2},Array{Float32,1}},Dense{typeof(identity),Array{Float32,2},Array{Float32,1}},Dense{typeof(identity),Array{Float32,2},Array{Float32,1}},Dropout{Float64,Colon}},LayerNorm{typeof(identity),Flux.Diagonal{Array{Float32,1}},Float32,1},Transformers.Basic.PwFFN{Dense{typeof(gelu),Array{Float32,2},Array{Float32,1}},Dense{typeof(identity),Array{Float32,2},Array{Float32,1}}},LayerNorm{typeof(identity),Flux.Diagonal{Array{Float32,1}},Float32,1},Dropout{Float64,Colon}}},Symbol(\"((x, m) => x':(x, m)) => 12\")},Dropout{Float64,Colon}}}(\n",
+              "  embed = CompositeEmbedding(tok = Embed(768), segment = Embed(768), pe = PositionEmbedding(768, max_len=512), postprocessor = Positionwise(LayerNorm((768,)), Dropout(0.1))),\n",
+              "  transformers = Bert(layers=12, head=12, head_size=64, pwffn_size=3072, size=768),\n",
+              "  classifier = \n",
+              "    (\n",
+              "      pooler => Dense(768, 768, tanh)\n",
+              "      masklm => (\n",
+              "        transform => Chain(Dense(768, 768, gelu), LayerNorm((768,)))\n",
+              "        output_bias => Array{Float32,1}\n",
+              "      )\n",
+              "      nextsentence => Chain(Dense(768, 2), logsoftmax)\n",
+              "    )\n",
+              "), WordPiece(vocab_size=31090, unk=[UNK], max_char=200), Transformers.BidirectionalEncoder.bert_uncased_tokenizer)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PVnUCS3Jq7_D"
+      },
+      "source": [
+        "defining all possible labels as labels"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PCjtGj1P4MlC",
+        "outputId": "00341a62-0c1c-45df-af8d-828f8de08d4e"
+      },
+      "source": [
+        "vocab = Vocabulary(wordpiece)\n",
+        "labels = unique(df[!,\"label\"])"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "13-element Array{String,1}:\n",
+              " \"INHIBITOR\"\n",
+              " \"ANTAGONIST\"\n",
+              " \"AGONIST\"\n",
+              " \"DOWNREGULATOR\"\n",
+              " \"PRODUCT-OF\"\n",
+              " \"SUBSTRATE\"\n",
+              " \"INDIRECT-UPREGULATOR\"\n",
+              " \"UPREGULATOR\"\n",
+              " \"INDIRECT-DOWNREGULATOR\"\n",
+              " \"ACTIVATOR\"\n",
+              " \"AGONIST-ACTIVATOR\"\n",
+              " \"AGONIST-INHIBITOR\"\n",
+              " \"SUBSTRATE_PRODUCT-OF\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-22wczJLBJx0"
+      },
+      "source": [
+        "redefining the model, its parameters and the optimiser with the learning rate\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rt2yVtBuBJx0",
+        "outputId": "57aa3ff1-afc0-43b4-b187-b959f0e6ce8a"
+      },
+      "source": [
+        "#defining clf layer with dropout\n",
+        "clf = Chain(\n",
+        "    Dropout(0.1),\n",
+        "    Dense(size(model.classifier.pooler.W ,1), length(labels))\n",
+        ")\n",
+        "\n",
+        "#redefining the scibert model\n",
+        "model =gpu(\n",
+        "      Basic.set_classifier(model,\n",
+        "                    (\n",
+        "                        pooler = model.classifier.pooler,\n",
+        "                        clf = clf\n",
+        "                    )\n",
+        "                    )\n",
+        "  )\n",
+        "show(model)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TransformerModel{Bert{Stack{NTuple{12,Transformer{Transformers.Basic.MultiheadAttention{Dense{typeof(identity),CuArray{Float32,2},CuArray{Float32,1}},Dense{typeof(identity),CuArray{Float32,2},CuArray{Float32,1}},Dense{typeof(identity),CuArray{Float32,2},CuArray{Float32,1}},Dense{typeof(identity),CuArray{Float32,2},CuArray{Float32,1}},Dropout{Float64,Colon}},LayerNorm{typeof(identity),Flux.Diagonal{CuArray{Float32,1}},Float32,1},Transformers.Basic.PwFFN{Dense{typeof(gelu),CuArray{Float32,2},CuArray{Float32,1}},Dense{typeof(identity),CuArray{Float32,2},CuArray{Float32,1}}},LayerNorm{typeof(identity),Flux.Diagonal{CuArray{Float32,1}},Float32,1},Dropout{Float64,Colon}}},Symbol(\"((x, m) => x':(x, m)) => 12\")},Dropout{Float64,Colon}}}(\n",
+            "  embed = CompositeEmbedding(tok = Embed(768), segment = Embed(768), pe = PositionEmbedding(768, max_len=512), postprocessor = Positionwise(LayerNorm((768,)), Dropout(0.1))),\n",
+            "  transformers = Bert(layers=12, head=12, head_size=64, pwffn_size=3072, size=768),\n",
+            "  classifier = \n",
+            "    (\n",
+            "      pooler => Dense(768, 768, tanh)\n",
+            "      clf => Chain(Dropout(0.1), Dense(768, 13))\n",
+            "    )\n",
+            ")"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H46CJrm9BF3D"
+      },
+      "source": [
+        "# Test Section"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3FRbKyPiBFT3"
+      },
+      "source": [
+        ""
       ]
     },
     {
