continuing the new structuring and extending it to training

--- a/src/DataMining.ipynb
+++ b/src/DataMining.ipynb
@@ -973,6 +973,103 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Nq5yrzg-CKyN"
+      },
+      "source": [
+        "### setting parameters and training the model\n",
+        "\n",
+        "\n",
+        "> after the training some stats get plotted\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8JtC9wWBrJKm"
+      },
+      "source": [
+        "setting the learnrate and the optimizer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vylxA3v4gBFm",
+        "outputId": "a394a24e-a359-43e7-e210-a7e91f430c73"
+      },
+      "source": [
+        "ps = params(model)\n",
+        "opt = ADAM(2e-5)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ADAM(2.0e-5, (0.9, 0.999), IdDict{Any,Any}())"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QTG0iSTDHqUS",
+        "outputId": "e32ac274-12d2-4973-8239-1f7d3abb6089"
+      },
+      "source": [
+        "CUDA.memory_status() "
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Effective GPU memory usage: 99.98% (14.752 GiB/14.756 GiB)\n",
+            "CUDA allocator usage: 14.322 GiB\n",
+            "binned usage: 14.322 GiB (5.932 GiB allocated, 8.390 GiB cached)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MQKy9AVKGq2F"
+      },
+      "source": [
+        "Set the number of epochs, define some arrays in which intermediate results are stored and start the training"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a0fBt8PtFiWO"
+      },
+      "source": [
+        "train!(true)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "H46CJrm9BF3D"
       },
       "source": [
