--- a/bericht/sections/stateOfTheArt.tex
+++ b/bericht/sections/stateOfTheArt.tex
@@ -23,10 +23,20 @@ Based on this prior knowledge, it was hypothesized that a model that takes these
 \newline
 Nevertheless, BioBERT itself is only a further trained version of BERT. This means the original BERT model was used as the basis and further trained on either PubMed abstracts, PubMed central full-text articles, or on both. Therefore the authors chose to keep the original BERT vocabulary to be able to use the pretrained version of BERT as the basis. This had the advantage that the original model only needed to be further trained on the new corpus and the needed training time could be reduced.
 
-\color{red}
+
 \section{AOG-BERT}
 	Another approach that does not only aim at matching the corpus on which BERT is trained better to the later domain, but at the same time tries to teach the model a more extensive understanding of the texts is AOG-BERT. With this further goal, however, the training strategy underlying BERT needs to be adapted as well, because as we saw earlier, BERT's pre-training is based only on a Masklm task and a Nextsentence classification. Although these two tasks together ensure that we get a decent initial model, the question remains whether specific tasks can be solved better by a more specific training in the pre-training process or by embedding additional information.
-	Based on this, one could argue that a model with domain entity knowledge could perform better than a model that does not use this information. For example, \citeauthor{Liu2021} argue that specific institutes may be more focused on specific scientific domains and that this knowledge could help the model to assign a paper to a research domain. Although it should be reasonable to assume that the actual text should be sufficient to assign a paper to a research area, this knowledge might prove beneficial for the model. 
+	Based on this, one could argue that a model with domain entity knowledge could perform better than a model that does not use this information. For example, \citeauthor{Liu2021} argue that specific institutes may be more focused on specific scientific domains and that this knowledge could help the model to assign a paper to a research domain. Although it should be reasonable to assume that the actual text should be sufficient to assign a paper to a research area, this knowledge might prove beneficial for the model.
+	
+	\color{red}
+	Compared to existing approaches, OAG-BERT attempts to use not only homogeneous knowledge but also non-homogeneous knowledge from the Open Academic Graph. The information types used include authors, fields of study, venues and affiliation.
+	
+	To integrate this information into the model, three crucial changes are made compared to BERT.  
+	
+	The first adaptation is the heterogeneous entity type embedding. Here, the token type embeddings are replaced with entity type embeddings, providing unique labels for the different entity types, so that it is possible to identify which input belongs to which category.
+	The next modification is the entity-aware 2D-positional encoding. Just like BERT, OAG-BERT needs positional embeddings to be aware of the sequence order. However, BERT does not have the ability to distinguish between two directly adjacent entities and would interpret them as one entity. To solve this problem, the positional embeddings in OAG-BERT are two dimensional and encode in the first dimension the so-called inter-entity sequence order and in the second dimension the intra-entity sequence order. (Final result is the sum of the two dimensions? )
+	
+	The last change is the span-aware entity masking. Although the masking strategy is not changed for either the abstract or the actual text, special masking is proposed for the new entity types. This is supposed to help OAG-BERT to learn complex entities especially if they consist of many tokens. This means that an entity consisting of four or less tokens is completely masked, but as soon as it is longer only a part of the entity is masked. Here the length of the mask is drawn from a geometric distribution.   
 \begin{itemize}
 	\item als kontrahend zu SciBERT \cite{Liu2021}
 \end{itemize}
